<resources>
    <string name="app_name">SaleOfCars</string>
    <string name="enter_the_car_brand">Enter the car brand</string>
    <string name="enter_the_car_model">Enter the car Model</string>
    <string name="save_the_model">Save the Model</string>
    <string name="welcome">Welcome</string>
    <string name="enter_the_make_and_model_of_the_car">Enter the Make \n and  Model of the Car</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="buy">Buy</string>
    <string name="text">Text</string>
    <string name="appl_name">Notes App</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="type_something">Type something...</string>
    <string name="note_title">Note title</string>
    <string name="note_description">Note description</string>
    <string name="saleofcars">SaleOfCars</string>
</resources>
